--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,4 +1,4 @@
-name: Run Tests in Docker
+name: Build and Push Docker Image
 
 on:
   push:
@@ -11,30 +11,32 @@ on:
       - master
 
 jobs:
-  test:
-    runs-on: ubuntu-latest  # Use the latest Ubuntu runner
+  build_and_push:
+    runs-on: ubuntu-latest
 
     steps:
-      # Checkout the code to the GitHub runner
+      # Checkout the code from the repository
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # Set up Docker to build the container
+      # Set up Docker Buildx for advanced build features
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      # Build the Docker image based on your Dockerfile
+      # Log in to Docker Hub using secrets
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.living7ston }}
+          password: ${{ secrets.rohith#docker }}
+
+      # Build the Docker image from the Dockerfile
       - name: Build Docker image
         run: |
-          docker build -t my-node-app .
+          docker build -t living7ston/loginpage .
 
-      # Run tests inside the Docker container
-      - name: Run tests in Docker container
+      # Tag the Docker image with the latest tag and push to Docker Hub
+      - name: Push Docker image to Docker Hub
         run: |
-          docker run --rm my-node-app npm test
-          
-      # Optionally, you can push the Docker image to Docker Hub or another registry if needed
-      # - name: Push Docker image
-      #   run: |
-      #     docker tag my-node-app your-dockerhub-username/my-node-app:latest
-      #     docker push your-dockerhub-username/my-node-app:latest
+          docker tag living7ston/loginpage living7ston/loginpage:latest
+          docker push living7ston/loginpage:latest
