--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,8 +27,8 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.living7ston }}
-          password: ${{ secrets.rohith#docker }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ rohithdocker}}
 
       # Build the Docker image from the Dockerfile
       - name: Build Docker image
