--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,7 +28,7 @@ jobs:
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ rohithdocker}}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       # Build the Docker image from the Dockerfile
       - name: Build Docker image
